src/objects/PREtracker__c.object
<CustomObject>
    <fields>
        <fullName>ParamRisqueEntite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entite Risk Parameter</label>
        <referenceTo>ParamRisqueEntite__c</referenceTo>
        <relationshipName>PREtrackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>valeur__c</fullName>
        <label>value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tracker of the RTP</label>
    <nameField>
        <label>Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trackers of the RTP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>